@@ -179,7 +179,7 @@ public class Mp4Encoder implements Encoder {
 
             // Gather the info and write the tag
             try {
-                AudioFile audiofile = new AudioFile(mp4File.getAbsolutePath());
+                AudioFile audiofile = new AudioFile(mp4File);
                 AbstractTag tag = new DefaultTag();
 
                 tag.setAlbum(album);
