@@ -192,7 +192,7 @@ public class OggEncoder implements Encoder {
 
             // Gather the info and write the tag
             try {
-                AudioFile audiofile = new AudioFile(oggFile.getAbsolutePath());
+                AudioFile audiofile = new AudioFile(oggFile);
                 AbstractTag tag = new DefaultTag();
 
                 tag.setAlbum(album);
